src/scss/block/common.scss
@import "~scss/_vars";

.blocks {
	.block { font-size: 16px; line-height: 24px; word-break: break-word; display: flex; flex: auto; position: relative; margin: 0px 0px 2px 0px; }
	.block {
		.wrapMenu { width: 48px; text-align: right; }
		.wrapContent { width: calc(100% - 48px); position: relative; }
		
		.flex { position: relative; z-index: 2; }
		.icon.dnd { 
			width: 12px; background-size: 2px 10px; opacity: 0; cursor: grab; vertical-align: top; 
			border: 1px solid #dfddd0; box-shadow: 0px 0px 0px 0px rgba(255,255,255, 0); border-radius: 12px; height: 100%; transition: $transitionFast; margin-right: 7px;
			background-image: url('~img/icon/block/menu0.svg');
		}
		.icon.dnd:hover { 
			background-image: url('~img/icon/block/menu2.svg'); border-color: $colorOrange; 
			box-shadow: 0px 0px 0px 1px $colorOrange;
		}
		
		.colResize { width: 0px; position: relative; opacity: 0; }
		.colResize.active { opacity: 1; }
		.colResize {
			.inner { position: absolute; left: 20px; top: -15px; width: 8px; height: calc(100% + 30px); cursor: col-resize; z-index: 1; }
			.line { height: 100%; width: 2px; background: #ebe9e0; position: absolute; left: 50%; top: 0px; margin-left: -1px; }
		}
		
		.selectionOver { 
			position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: Highlight; opacity: 0.5;
			display: none; pointer-events: none; z-index: 10;
		}
		
		.focusable { border-radius: inherit; }
		
		.emptyToggle { 
			display: none; margin-left: 28px; color: $colorDarkGrey; position: relative; z-index: 2; cursor: pointer;
			transition: $transitionFast; 
		}
		.emptyToggle:hover { color: $colorBlack; }
	}

	.block > .wrapContent > .children > .block.last { margin: 0px; }
	
	.block.align0 > .wrapContent { text-align: left; }
	.block.align1 > .wrapContent { text-align: center; }
	.block.align2 > .wrapContent { text-align: right; }
	
	.block.isResizing { cursor: col-resize; user-select: none; }
	.block.isResizing {
		.icon.dnd { display: none; }
	}
	
	.block.isAdding.top::before {
		content: ""; display: block; width: calc(100% - 48px); height: 2px; background: $colorOrange; position: absolute; right: 0px; top: -2px;
	}
	
	.block.isAdding.bottom::after {
		content: ""; display: block; width: calc(100% - 48px); height: 2px; background: $colorOrange; position: absolute; right: 0px; bottom: -2px;
	}
	
	.block:hover > .wrapMenu > .icon.dnd { opacity: 1; background-image: url('~img/icon/block/menu1.svg'); }
	.block.showMenuAdd > .wrapMenu > .icon.dnd { opacity: 1; }
	.block.showMenu > .wrapMenu > .icon.dnd { opacity: 1; }

	.block.isAdding.top > .wrapContent > .selectable > .dropTarget { border-radius: 0px 0px 4px 4px !important; }
	.block.isAdding.bottom > .wrapContent > .selectable > .dropTarget { border-radius: 4px 4px 0px 0px !important; }

	.block > .wrapContent > .children.canToggle { display: none; }
	.block.isToggled > .wrapContent > .children { display: block; }
	.block.isToggled > .wrapContent > .emptyToggle { display: block; }
	.block.isToggled > .wrapContent > .selectable > .dropTarget > .flex > .markers > .marker.toggle { transform: rotateZ(90deg); }
	
	.block.isDragging > .wrapContent > .selectable > .dropTarget { opacity: 0.3; }
	
	.block > .wrapContent > .selectable.isSelected > .selectionOver { display: block; }
	.block > .wrapContent > .selectable.isSelected { 
		.placeHolder { display: none !important; } 
	}
	
	.block.blockIconPage > .wrapMenu { visibility: hidden; }
	.block.blockIconUser > .wrapMenu { visibility: hidden; }

	// Remove padding for first block after title
	.block.index-1 { padding-top: 0px !important; }
	#block-div-1 > .wrapContent > .children > .block.first { padding-top: 0px !important; }
}

